--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.5",
+    "@xata.io/client": "^0.29.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
